@@ -343,7 +343,6 @@
                         @{argLine}
                         <!-- Required for Java 18 -->
                         ${test.args}
-                        --illegal-access=deny
                         <!-- Required to fix failing EqualsVerifier test:
                             TestTracedLink.testEqualsAndHashContract:22 EqualsVerifier found a problem in class org.itsallcode.openfasttrace.api.core.TracedLink.
                             -> Unable to make field private final org.itsallcode.openfasttrace.api.core.LinkedSpecificationItem org.itsallcode.openfasttrace.api.core.TracedLink.otherLinkEnd accessible:
@@ -366,7 +365,6 @@
                         @{argLine}
                         <!-- Required for Java 18 -->
                         ${test.args}
-                        --illegal-access=deny
                         <!-- Required to fix failing EqualsVerifier test:
                             TestTracedLink.testEqualsAndHashContract:22 EqualsVerifier found a problem in class org.itsallcode.openfasttrace.api.core.TracedLink.
                             -> Unable to make field private final org.itsallcode.openfasttrace.api.core.LinkedSpecificationItem org.itsallcode.openfasttrace.api.core.TracedLink.otherLinkEnd accessible:
